Fixed alignment issues and font, and hover change updated

--- a/public/Themes/Thrivewellrx.Theme.Slimout/assets/scss/base/_font-face.scss
+++ b/public/Themes/Thrivewellrx.Theme.Slimout/assets/scss/base/_font-face.scss
@@ -109,12 +109,9 @@
 	font-style: normal;
 }
 
-@font-face {
-	font-family: "BebasNeue";
-	src: url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
-}
-
+/* <--- CORRECTED BEBAS NEUE IMPORT */
 @font-face {
 	font-family: "CabinetGrotesk";
 	src: url("/Themes/Thrivewellrx.Theme.Slimout/assets/fonts/cabinet-grotesk/CabinetGroteskExtralight.eot") format("embedded-opentype"),
